Commit: Multiple fix
- Modified javax for jakarta and upgrade of spring boot to 3.0.0
- Eliminated previous api
- Fixed some JUnit
- Added some business logic
